# speciaal_onderwijs

./: .gitignore  README.md  pyproject.toml
data/: primair_onderwijs.csv  secundair_onderwijs.csv
data/gemeenten/: gemeenten_per_jaar.csv  opsplitsingen.csv  samenvoegingen.csv
data/onderwijs/: 2013_2014.csv  2023_2024.csv
notebooks/: gemeenten.ipynb
