[tool.poetry]
name = "speciaal-onderwijs"
version = "0.1.0"
description = ""
authors = ["Dimitri Tokmetzis <dimitri.tokmetzis@ftm.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
geopandas = "^1.0.1"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
fiona = "^1.10.1"
folium = "^0.19.4"
matplotlib = "^3.10.0"
mapclassify = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
